fix color of text over image in dark mode

--- a/packages/experiments/src/components/Tile/Tile.scss
+++ b/packages/experiments/src/components/Tile/Tile.scss
@@ -474,12 +474,12 @@
     }
 
     .name {
-      color: $ms-color-white;
+      color: #fff;
       text-shadow: 0.5px 0.5px 2px rgba(#000, 0.55);
     }
 
     .activity {
-      color: $ms-color-white;
+      color: #fff;
       text-shadow: 0.5px 0.5px 2px rgba(#000, 0.55);
     }
   }
