--- a/packages/experiments/src/components/signals/Signal.scss
+++ b/packages/experiments/src/components/signals/Signal.scss
@@ -9,7 +9,7 @@
 
   .dark &,
   .dark.selected {
-    color: $ms-color-white;
+    color: #fff;
   }
 
   &:first-child {
